<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kotoba</string>
    <string name="next_question">Next</string>
    <string name="show_answer">Answer</string>
    <string name="how_do_i_use_kotoba_question">How do I use Kotoba?</string>
    <string name="how_do_i_use_kotoba_answer">Click Answer to see the answer.\nClick next to see another question.\nClick Manage Questions on the Menu to add and remove questions.</string>
    <string name="click_answer_to_see_answer">Click Answer to see the answer</string>
    <string name="manage_questions">Manage Questions</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="no_items_on_list">There are no items on the list.\nIf you want to add some, please click on the Add button on the menu.</string>
    <string name="must_type_question">Please type a question.</string>
    <string name="max_question_length_message">The question must have at most %d characters.</string>
    <string name="continue_button_label">Continue</string>
    <string name="alert_title">Alert!</string>
    <string name="are_you_sure_you_want_to_remove_question">Are you sure you want to remove this question?</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="help_kotoba_text">To use Kotoba:\n\t1. Go to the Main Screen.\n\t2. Click Next to see another question.\n\t3. Click Answer to see the answer to the current question.\n\t4. Click
        Manage Questions to add, remove or update questions.
    </string>
    <string name="copyright">Kotoba v0.1.4. Created in 2012 by Rafael Adson Barbosa Barros. All rights reserved.</string>
    <string name="add_new_question">Add New Question</string>
    <string name="save_and_new">Save and New</string>

</resources>
