<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textAppearance="@style/titleFont"/>

    <EditText
        android:id="@+id/edit_question_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="top"
        android:inputType="textLongMessage|textMultiLine|textPostalAddress"
        android:singleLine="false" >

    </EditText>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textAppearance="@style/titleFont"/>

    <EditText
            android:id="@+id/edit_question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_weight="0.7"
            android:inputType="textMultiLine"/>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <Button
                android:id="@+id/cancel_edit_question"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel"/>

        <Button
            android:id="@+id/save_question"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/save" />


    </LinearLayout>

</LinearLayout>
